app-deployment-blue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bb-movie-char-blue
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bb-movie-char
      version: blue
  template:
    metadata:
      labels:
        app: bb-movie-char
        version: blue
    spec:
      containers:
      - name: bb-movie-char
        image: yash5090/bb-movie-char:blue # Adjust the image tag for the blue version
        ports:
        - containerPort: 3000
        # env:
        # - name: SPRING_DATASOURCE_URL
        #   value: jdbc:mysql://mysql-service:3306/bb-movie-chardb?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
        # - name: SPRING_DATASOURCE_USERNAME
        #   value: root
        # - name: SPRING_DATASOURCE_PASSWORD
        #   value: Test@123
        resources:
          requests:
            memory: "500Mi"
            cpu: "500m"
          limits:
            memory: "1000Mi"
            cpu: "1000m"
