deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bb-movie-char-deployment
spec:
  replicas: 6  # Number of desired replicas
  selector:
    matchLabels:
      app: bb-movie-char
  template:
    metadata:
      labels:
        app: bb-movie-char
    spec:
      containers:
      - name: bb-movie-char
        image: yash5090/bb-movie-char:latest
        ports:
        - containerPort: 3000
