ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bb-movie-char-ingress
spec:
  rules:
  - host: bb-movie-char
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bb-movie-char-service
            port:
              number: 3000 #80
      - path: /app
        pathType: Prefix
        backend:
          service:
            name: bb-movie-char-service
            port:
              number: 3000 #80
