nwp.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: bb-movie-char-network-policy
spec:
  podSelector:
    matchLabels:
      app: bb-movie-char
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: bb-movie-char
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: bb-movie-char
